# preadator

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  conftest.py  docker-test.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  test_docker.sh
.github/workflows/: publish.yml  tests.yml
about/: index.html
contact/: index.html
docs/: about.md  contact.md  index.md
docs/source/: Examples.rst  Reference.rst  conf.py  index.rst
examples/: BaseExample.py  FullExample.py  ThreadExample.py
src/: __init__.py  process_manager.py
src/preadator/: __init__.py  locks.py  preadator.py  process_manager.py  utils.py
tests/: Dockerfile  __init__.py  test_exceptions.py  test_nested_pm.py  test_single_pm.py  utils.py
