[tool.poetry]
authors = ["Nicholas-Schaub <nick.schaub@nih.gov>"]
description = "Process and Thread Management Utility."
name = "preadator"
packages = [{include = "preadator", from = "src"}]
readme = "README.md"
repository = "https://github.com/nicholas-schaub/preadator"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
